kubernetes/uptime-kuma/overlays/k3s/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/instance: uptime-kuma
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`uptime.arthurvardevanyan.com`)
      kind: Rule
      services:
        - name: uptime-kuma-service
          port: 3001
